# aqar-scraper

./: .gitignore  README.md  aqar_fm_listings_auction_cleaned.csv  aqar_fm_listings_rental_cleaned.csv  checks.ipynb  clean_data.py  data.html  dataset_card.md  main.py  output.json  pyproject.toml
.github/: copilot-instructions.md
data/processed/: aqar_fm_listings_auction_cleaned.json
data/raw/: category1.json  category2.html  listing.html  listing.json
