[project]
name = "aqar-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "datasets>=4.4.2",
    "huggingface-hub>=1.2.3",
    "ipykernel>=7.1.0",
    "kaggle>=1.8.3",
    "pyarrow>=22.0.0",
]
